fix header & logo dimensions on mobile

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -73,13 +73,9 @@ header {
       position: absolute;
       top: -1000px;
     }
-    img#word-mark { transition: transform 0.2s ease-in-out; }
   }
   #masthead:hover {
-    p.byline,
-    svg path {
-      fill: $violet;
-    }
+    svg path { fill: $violet; }
   }
   p#home-link-container { display: none; }
   nav { display: none; }
@@ -92,7 +88,15 @@ header {
   }
   .simple-marquee-container.hidden { display: none; }
 }
-body:not(#index) header { height: 60px; }
+body:not(#index) header {
+  height: 45px;
+  #masthead {
+    svg {
+      width: 100px;
+      height: auto;
+    }
+  }
+}
 /* End Header }}} */
 
 /* Footer {{{ */
@@ -317,7 +321,7 @@ body#about {
   }
 }
 .about-carousel #about-intro {
-  padding: 60px 30px 0;
+  padding: 45px 30px 0;
   p {
     color: white;
     font-size: 18px;
@@ -464,7 +468,7 @@ body#follow {
         height: 375px;
         object-fit: cover;
         object-position: center top;
-        margin: 60px 0 15px;
+        margin: 45px 0 15px;
       }
     }
     .insta-post:first-of-type { display: block; }
@@ -481,7 +485,7 @@ body#follow {
   justify-content: flex-start;
   main {
     .contact-data {
-      padding-top: 15px;
+      // padding-top: 15px;
       background: black;
       img {
         margin: 45px 0 0;
@@ -502,14 +506,15 @@ body#follow {
 /* Contact Page }}}*/
 
 /* Mobile-Landscape Styles {{{ */
+// should be combined with aspect-ratio!
 @media screen and (min-width: 320px) and (max-width: 767px) and (orientation: landscape) {
   /* Kurzer Prozess, aka. Trick 77 */
   header, footer, div.description { display: none; }
 }
 /* End Mobile-Landscape Styles }}} */
 
-/* Mobile Landscape {{{ */
-// should be combined with aspect-ratio!
+/* --- Desktop Styles --- */
+
 @media (min-width: 767px) {
 
   body,
@@ -517,9 +522,7 @@ body#follow {
     height: 100vh; // flex-column-layout
     background: rgb(44, 44, 44);
   }
-/* End Mobile Landscape }}} */
 
-/* --- Desktop Styles --- */
 
   /* Desktop Header {{{ */
   header {
@@ -535,6 +538,7 @@ body#follow {
     grid-template-rows: auto;
     // background: url('/assets/_pic/header_guides.png');
   }
+  body:not(#index) header #masthead, // no exceptions on Desktop
   header #masthead {
     grid-column: 2/3;
     position: relative;
